--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Angular2NewsMedia</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
 </head>
-<body>
+
+
   <app-root>Loading...</app-root>
-</body>
+
+
 </html>
