--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <base href="/angular2-news-media/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
@@ -16,4 +16,4 @@
   <app-root>Loading...</app-root>
 
 
-</html><script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.ea1730303de9724183be.bundle.js"></script><script type="text/javascript" src="scripts.7cff5df33148828a8761.bundle.js"></script><script type="text/javascript" src="main.8174a23ff018491a581b.bundle.js"></script>
+</html><script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.ea1730303de9724183be.bundle.js"></script><script type="text/javascript" src="scripts.7cff5df33148828a8761.bundle.js"></script><script type="text/javascript" src="main.af56bbba049aaec62bf0.bundle.js"></script>
