--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Angular2NewsMedia</title>
-  <base href="/angular2-news-media/">
+  <title>Angular2 News Media</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,4 +16,4 @@
   <app-root>Loading...</app-root>
 
 
-</html><script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.ea1730303de9724183be.bundle.js"></script><script type="text/javascript" src="scripts.7cff5df33148828a8761.bundle.js"></script><script type="text/javascript" src="main.af56bbba049aaec62bf0.bundle.js"></script>
+</html><script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.ea1730303de9724183be.bundle.js"></script><script type="text/javascript" src="scripts.ec2999d9c44269ec11ba.bundle.js"></script><script type="text/javascript" src="main.af56bbba049aaec62bf0.bundle.js"></script>
